fix alignment on background-color for hover states in main nav

--- a/themes/gfsc/assets/sass/base/_nav.sass
+++ b/themes/gfsc/assets/sass/base/_nav.sass
@@ -56,7 +56,7 @@
       justify-content: center
       align-items: center
       height: 100%
-      background-size: 200% 100%
+      background-size: 210% 100%
       background-image: linear-gradient(to right, transparent 50%, $primary 50%)
       -webkit-transition: 0.2s
       -moz-transition: 0.2s
@@ -64,7 +64,7 @@
       background-clip: border-box
       background-color: $secondary
       &:hover
-        background-position: -100% 0
+        background-position: -95% 0
         a
           color: $secondary
       &.active
